--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#edu">Education</a> ]</p>-->
 
     <table class="imgtable"><tr valign="center">
-        <td><img src="IMG_2648.jpg" width = '240', height='300' alt="Shuming Kong" /></td>
+        <td><img src="IMG_2648.JPG" width = '240', height='300' alt="Shuming Kong" /></td>
         <td align="left">
             <p><span style="font-size: 110%"><b>Shuming Kong (孔 书铭)</b></span></p>
             <p>
