--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Shuming Kong</title>
-    <base href="https://Shuming.github.io/index">
+    <base href="https://Viperccc.github.io/index">
 </head>
 
 <body>
