--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	<div>
         <h2><hr><a name="biography"></a>Brief Biography</h2>
         <ul>
-           Shuming Kong is currently a Phd candidate at Shanghai Jiao Tong University, Shanghai, Japan.
+           Shuming Kong is currently a Phd candidate at Shanghai Jiao Tong University, Shanghai, China.
            <br/> <br/>
    
          In my free time, I like playing LOL and wathching Premier League. My favorite club is Chelsea and i hope Chelsea could win the Champions League again!</p></li>
