--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
              <i>In Proceedings of 10th International Conference on Learning Representations (ICLR2022 oral，accept rate = 54/3391)</i>,  [<a href="https://openreview.net/forum?id=EskfH0bwNVn" target="_blank">PDF</a>] [<a href="https://github.com/Viperccc/RDIA" target="_blank">Code</a>] [Poster].</p></li>
  
             <li><p>AutoSrh: An Embedding Dimensionality Search Framework for Tabular Data Prediction.<br>
-                <b>S. Kong</b>, W. Chen, Y. Shen, L. Huang.<br>
+                <b>S. Kong</b>, W. Cheng, Y. Shen, L. Huang.<br>
              <i>IEEE Transactions on Knowledge and Data Engineering (TKDE 2022)</i>, [<a href="https://ieeexplore.ieee.org/document/9807387/" target="_blank">PDF</a>] [<a href="https://github.com/Viperccc/AutoSrh" target="_blank">Code</a>] [Poster].</p></li>
             
             <li><p>Using All Training Data Effectively for Deep Learning with Noisy Labels.<br>
